[gd_scene load_steps=10 format=2]

[ext_resource path="res://examples/example.tscn" type="PackedScene" id=1]
[ext_resource path="res://examples/swipe-areas/swipe_areas_example.gd" type="Script" id=2]
[ext_resource path="res://addons/swipe-detector/swipe_detector.gd" type="Script" id=3]
[ext_resource path="res://addons/swipe-detector/icon.png" type="Texture" id=4]
[ext_resource path="res://examples/resources/theme.tres" type="Theme" id=5]
[ext_resource path="res://examples/resources/Trail.tscn" type="PackedScene" id=6]
[ext_resource path="res://examples/resources/spot_green.png" type="Texture" id=7]
[ext_resource path="res://examples/resources/spot_red.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 253, 313 )

[node name="SwipeAreasExample" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="SwipeDetector" type="Node" parent="." index="3"]
script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
process_method = "Idle"
distance_threshold = 0.01

[node name="Red" type="Area2D" parent="SwipeDetector" index="0"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SwipeDetector/Red" index="0"]
polygon = PoolVector2Array( 960, 0, 512, 0, 512, 640, 960, 640 )

[node name="Green" type="Area2D" parent="SwipeDetector" index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwipeDetector/Green" index="0"]
position = Vector2( 256, 316 )
shape = SubResource( 1 )

[node name="Label1" type="Label" parent="." index="4"]
modulate = Color( 0.909804, 0.290196, 0.372549, 1 )
margin_left = 672.0
margin_top = 297.0
margin_right = 824.0
margin_bottom = 348.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Red
Area"
align = 1

[node name="Label2" type="Label" parent="." index="5"]
modulate = Color( 0.6, 0.721569, 0.596078, 1 )
margin_left = 175.0
margin_top = 284.0
margin_right = 327.0
margin_bottom = 335.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Green
Area"
align = 1

[node name="GreenTrail" parent="." index="6" instance=ExtResource( 6 )]
texture = ExtResource( 7 )

[node name="RedTrail" parent="." index="7" instance=ExtResource( 6 )]
texture = ExtResource( 8 )

[connection signal="swipe_ended" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_ended"]
[connection signal="swipe_started" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_started"]
[connection signal="swipe_updated" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_updated"]
